--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /Data/
 /Data/Data_JB/
 /Data/Data_SW/
-/JB/
-/CrossCorrelation/Cross-Correlation-FineLongGrid.ipynb
+/JB-Thermosphere/
+/CrossCorrelation/Cross-Correlation-FineLongitudeGrid.ipynb
