ignore thermosphere data.

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 /Data/Data_JB/
 /Data/Data_SW/
 /JB-Thermosphere/
+/JB-Thermosphere/JB-ROM-Shifted.ipynb
+/JB-Thermosphere/figs/
 /CrossCorrelation/Cross-Correlation-FineLongitudeGrid.ipynb
